tests/snapshots/help_snapshots__root_help_locks_public_command_surface.snap
---
source: tests/help_snapshots.rs
assertion_line: 23
expression: output
---
Secure, reproducible per-workspace dev sandbox

Usage: podbox [OPTIONS] <COMMAND>

Commands:
  shell
  init
  doctor
  status
  completion
  version
  workspace
  network
  config
  manifest
  image
  help        Print this message or the help of the given subcommand(s)

Options:
      --config <CONFIG>
      --manifest <MANIFEST>
      --workspace <WORKSPACE>
      --json
  -q, --quiet
  -v, --verbose...
      --no-color
      --yes
      --dry-run
  -h, --help                   Print help
  -V, --version                Print version
